# github-notifier

./: .gitignore  Cargo.toml  LICENSE  Makefile  README.md  github-notifier.desktop.in  tauri.conf.json
src/: app_config.rs  main.rs
src/github/: github.rs
src/notify/: mod.rs  notification_manager.rs  notify.rs  snooze_config_store.rs  snooze_notifications.rs  tray.rs
